--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html>
 <head>
 	<title></title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<!-- <link rel="stylesheet" type="text/css" href="css/flex-style.css"> -->
+	<link rel="stylesheet" type="text/css" href="css/float-style.css">
 </head>
 <body>
 
-	<header id="top">
-		<div class="navbar">
+	<header id="top" >
+		<div class="navbar group">
 			<img class="logo" src="logo-adam.svg" alt="logo">
 			<nav>
 				<ul class="nav-list">
@@ -18,50 +19,50 @@
 				</ul>
 			</nav>
 		</div>	
-		<div class="intro">
+		<div class="intro group">
 			<img class="profile" src="responsive-layout-profile.png" alt="profile image">
 			<p class="intro-p">Hi, I'm a cleaner and I on my way to learn Front-end developer. As soon as possible I will write clean code like how I can clean your house.</p>
 		</div>
-		<div class="clear"></div>
+		<!-- <div class="clear"></div> -->
 	</header>	
 	<main>
 
 		<h2 id="portfolio">Portfolio</h2>
-		<div  class="container">
+		<div  class="container group">
 
 
 
-			<div class="portfolio">
+			<div class="portfolio p1">
 				<img src="portfolio-1.png" alt="portfolio1">
 				<h3>Marketing Page</h3>
 				<p>This project shows the front page of a marketing website mean for a specific business I'm intrested in.</p>
 			</div>	
 		
-			<div class="portfolio">
+			<div class="portfolio p2">
 				<img src="portfolio-2.png" alt="portfolio2">
 				<h3>Search Page</h3>
-				<p>This project searches trough a specific database to find infromation that the user is trying to look up.</p>
+				<p>This project searches trough a specific database to find infromation that the user is trying to.</p>
 			</div>	
 
-			<div class="portfolio">
+			<div class="portfolio p3">
 				<img src="portfolio-3.png" alt="portfolio3">
 				<h3>Travel App</h3>
 				<p>This project compares travel times based on different transportation methods and tells you te best one.</p>
 			</div>	
 
-			<div class="portfolio">
+			<div class="portfolio p4">
 				<img src="portfolio-4.png" alt="portfolio4">
 				<h3>Map of Favorite Spots</h3>
 				<p>This project uses mapping apis to plot points for my favorite spots in the city for a do-it-yourself walking tour.</p>
 			</div>		
 
-			<div class="portfolio">
+			<div class="portfolio p5">
 				<img src="portfolio-5.png" alt="portfolio5">
 				<h3>Photo Gallery</h3>
 				<p>This project shows pictures from a recent trip to the view and allows them to easily navigate through photos.</p>
 			</div>	
 
-			<div class="portfolio">
+			<div class="portfolio p6">
 				<img src="portfolio-6.png" alt="portfolio6">
 				<h3>Calculator</h3>
 				<p>Someone can enter in the numbers they want, and press the big blue button and get the result.</p>
@@ -93,10 +94,10 @@
 
 
 	<footer>
-		<div class="navbar footer-container">
-			<img class="logo logo-footer" src="logo-adam.svg" alt="logo">
+		<div class="navbar footer-container group">
+			<img class="logo-footer" src="logo-adam.svg" alt="logo">
 			<nav>
-				<ul class="nav-list nav-footer">
+				<ul class="nav-footer">
 					<li><a href="index.html">Home</a></li>
 					<li><a href="#portfolio">Portfolio</a></li>
 					<li><a href="#skills">Skills</a></li>
