--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Portfolio Page</title>
 	<!-- <link rel="stylesheet" type="text/css" href="css/flex-style.css"> -->
 	<link rel="stylesheet" type="text/css" href="css/float-style.css">
 </head>
